event plan view + new custom pipe for filter processes with status

--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -38,3 +38,11 @@ button.active {
 .info-group > * > *:first-of-type {
     flex-basis: 150px;
 }
+
+.btn-group {
+    margin-top: 10px;
+}
+
+.process-item {
+    margin: 5px;
+}
