--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.html
@@ -1,4 +1,5 @@
-<span class="mat-display-1">View Event Plan ({{ eventPlan.code }})</span>
+<span class="mat-display-1">View Event Plan <span *ngIf="eventPlan && eventPlan.code">({{ eventPlan.code }})</span>
+</span>
 
 <mat-tab-group>
   <!-- Tab1: Basis Info -->
@@ -95,66 +96,72 @@
   <mat-tab label="Processes">
     <div class="tab-body">
       <div class="mat-subheading-1">Processes
-        <button mat-icon-button color="primary" (click)="addEventProcessToEvent()">
+        <button mat-icon-button class="process-btn-group" color="primary" (click)="addEventProcessToEvent()">
           <mat-icon>edit</mat-icon>
         </button>
-        <mat-tab-group>
-          <mat-tab *ngFor="let status of eventPlanStatus" [label]="status">
-            <div class="mat-body" *ngIf="eventPlan.processes && eventPlan.processes.length === 0; else eventProcesses">
-              No process yet.
-            </div>
-          </mat-tab>
-        </mat-tab-group>
-        <ng-template #eventProcesses>
-          <div class="btn-group" fxLayout="row">
-            <button mat-stroked-button class="btn-sm" type="button" [ngClass]="{'active': !selectProcessStatus}"
-              (click)="filterProcesses()">All</button>
-            <button mat-stroked-button class="btn-sm" type="button"
-              [ngClass]="{'active': selectProcessStatus === 'Open'}" (click)="filterProcesses('Open')">Open</button>
-            <button mat-stroked-button class="btn-sm" type="button"
-              [ngClass]="{'active': selectProcessStatus === 'Progress'}"
-              (click)="filterProcesses('Progress')">Progress</button>
-            <button mat-stroked-button class="btn-sm" type="button"
-              [ngClass]="{'active': selectProcessStatus === 'Done'}" (click)="filterProcesses('Done')">Done</button>
-            <button mat-stroked-button class="btn-sm" type="button"
-              [ngClass]="{'active': selectProcessStatus === 'Cancelled'}"
-              (click)="filterProcesses('Cancelled')">Cancel</button>
-            <button mat-stroked-button class="btn-sm" type="button"
-              [ngClass]="{'active': selectProcessStatus === 'Paid'}" (click)="filterProcesses('Paid')">Pay</button>
-            <button mat-stroked-button class="btn-sm" type="button"
-              [ngClass]="{'active': selectProcessStatus === 'Closed'}"
-              (click)="filterProcesses('Closed')">Close</button>
-          </div>
-          <!-- <pre>{{ filteredEventProcesses | json }}</pre> -->
-          <div class="process-items" *ngFor="let process of filteredEventProcesses; let i = index; let l = count">
-            <div *ngIf="!selectProcessStatus">
-              <button mat-button (click)="onMoveDownPosition(process, i)" *ngIf="i !== l-1">
-                <mat-icon>keyboard_arrow_down</mat-icon>
-              </button>
-              <button mat-button (click)="onMoveUpPosition(process, i)" *ngIf="i !== 0">
-                <mat-icon>keyboard_arrow_up</mat-icon>
-              </button>
-            </div>
-            <div class="mat-body-strong">
-              {{ getDuration(process) }} <i>{{ process.type }}</i>
-            </div>
-            <pre fxLayout="column">
-                      <span>Status: {{ process.status }}</span>
-                      <div class="btn-group" fxLayout="row">
-                          <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Open')" *ngIf="process.status !== 'Open'">Open</button>
-                          <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Progress')" *ngIf="process.status !== 'Progress'">Progress</button>
-                          <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Done')" *ngIf="process.status !== 'Done'">Done</button>
-                          <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Cancelled')" *ngIf="process.status !== 'Cancelled'">Cancel</button>
-                          <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Paid')" *ngIf="process.status !== 'Paid'">Pay</button>
-                          <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Closed')" *ngIf="process.status !== 'Closed'">Close</button>
-                      </div>
-                  </pre>
-            <div class="mat-body-strong">{{ process.type }}:{{ process.name }}</div>
-            <div class="mat-small">{{ process?.provider?.name }}</div>
-            <div class="mat-body">{{ process.remarks }}</div>
-          </div>
-        </ng-template>
       </div>
+      <mat-tab-group>
+        <mat-tab *ngFor="let status of eventPlanStatus;let i = index" [label]="status">
+          <div class="mat-body" *ngIf="eventPlan.processes && eventPlan.processes.length === 0; else eventProcesses">
+            No process yet.
+          </div>
+          <ng-template #eventProcesses>
+            <div class="btn-group" fxLayout="row">
+              <button mat-stroked-button class="btn-sm" type="button" [ngClass]="{'active': !selectProcessStatus}"
+                (click)="filterProcesses()">All</button>
+              <button mat-stroked-button class="btn-sm" type="button"
+                [ngClass]="{'active': selectProcessStatus === 'Open'}" (click)="filterProcesses('Open')">Open</button>
+              <button mat-stroked-button class="btn-sm" type="button"
+                [ngClass]="{'active': selectProcessStatus === 'Progress'}"
+                (click)="filterProcesses('Progress')">Progress</button>
+              <button mat-stroked-button class="btn-sm" type="button"
+                [ngClass]="{'active': selectProcessStatus === 'Done'}" (click)="filterProcesses('Done')">Done</button>
+              <button mat-stroked-button class="btn-sm" type="button"
+                [ngClass]="{'active': selectProcessStatus === 'Cancelled'}"
+                (click)="filterProcesses('Cancelled')">Cancel</button>
+              <button mat-stroked-button class="btn-sm" type="button"
+                [ngClass]="{'active': selectProcessStatus === 'Paid'}" (click)="filterProcesses('Paid')">Pay</button>
+              <button mat-stroked-button class="btn-sm" type="button"
+                [ngClass]="{'active': selectProcessStatus === 'Closed'}"
+                (click)="filterProcesses('Closed')">Close</button>
+            </div>
+            <!-- <pre>{{ filteredEventProcesses | json }}</pre> -->
+            <div class="process-item"
+              *ngFor="let process of filteredEventProcesses | processesFilter: status; let i = index; let l = count">
+              <mat-card class="mat-elevation-z4">
+                <div *ngIf="!selectProcessStatus">
+                  <button mat-button (click)="onMoveDownPosition(process, i)" *ngIf="i !== l-1">
+                    <mat-icon>keyboard_arrow_down</mat-icon>
+                  </button>
+                  <button mat-button (click)="onMoveUpPosition(process, i)" *ngIf="i !== 0">
+                    <mat-icon>keyboard_arrow_up</mat-icon>
+                  </button>
+                </div>
+                <div class="mat-body-strong">
+                  {{ getDuration(process) }} <i>{{ process.type }}</i>
+                </div>
+                <pre fxLayout="column">
+                    <span>Status: {{ process.status }}</span>
+                    <div class="btn-group" fxLayout="row">
+                        <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Open')" *ngIf="process.status !== 'Open'">Open</button>
+                        <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Progress')" *ngIf="process.status !== 'Progress'">Progress</button>
+                        <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Done')" *ngIf="process.status !== 'Done'">Done</button>
+                        <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Cancelled')" *ngIf="process.status !== 'Cancelled'">Cancel</button>
+                        <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Paid')" *ngIf="process.status !== 'Paid'">Pay</button>
+                        <button mat-stroked-button class="btn-sm" type="button" (click)="changeStatus(process, 'Closed')" *ngIf="process.status !== 'Closed'">Close</button>
+                    </div>
+                  </pre>
+                <div class="mat-body-strong">{{ process.type }}:{{ process.name }}</div>
+                <div class="mat-small">{{ process?.provider?.name }}</div>
+                <div class="mat-body">{{ process.remarks }}</div>
+              </mat-card>
+            </div>
+            <div class="mat-body" *ngIf="(filteredEventProcesses | processesFilter: status).length === 0">
+              <p>No process yet.</p>
+            </div>
+          </ng-template>
+        </mat-tab>
+      </mat-tab-group>
     </div>
   </mat-tab>
   <!-- Tab4: Form -->
