auto height for textarea

--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -5,12 +5,12 @@
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'textarea'">
-    <textarea matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+    <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="4" rows="4" [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
       [required]="field.required"></textarea>
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'textarea-autocomplete'">
-    <textarea matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
+    <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="4" rows="4" [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
       [required]="field.required" [matAutocomplete]="textareaAutocomplete"></textarea>
 
     <mat-autocomplete #textareaAutocomplete="matAutocomplete" [displayWith]="displayFn"
