event plan view > processes

--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -43,6 +43,10 @@ button.active {
     margin-top: 10px;
 }
 
+.btn-group button {
+    margin-right: 10px;
+}
+
 .process-item {
     margin: 5px;
 }
