event plan view > re-structure html code

--- a/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
+++ b/ng-app/src/app/event/event-plan-view/event-plan-view.component.css
@@ -50,3 +50,9 @@ button.active {
 .process-item {
     margin: 5px;
 }
+
+.btn-link {
+    padding: 5px;
+    min-width: auto;
+    line-height: 15px;
+}
